# Celeste

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Celeste.sln  TestCeleste.sln
BuildTools/: AddPackages.txt  BuildProject.txt  CMakeLists.txt
Celeste/: CMakeLists.txt  Celeste.vcxproj  Celeste.vcxproj.filters
Celeste/Build Events/: CustomBuildStep.bat
Celeste/BuildEvents/: CustomBuildStep.bat
Celeste/Headers/Algorithms/: EntityAlgorithms.h
Celeste/Headers/Animation/: AnimationEnums.h  AnimationState.h  Animator.h  StateMachine.h
Celeste/Headers/Audio/: AudioManager.h  AudioSource.h
Celeste/Headers/Bindings/: InputDataBindingGenerators.h
Celeste/Headers/Callbacks/: ActivateGameObject.h  Callback.h  ExecuteLuaScript.h  ExitGame.h  KillGameObject.h  KillOwnerScreen.h  KillScreen.h  RenderGameObject.h  TransitionToScreen.h
Celeste/Headers/Debug/: Log.h  Profile.h
Celeste/Headers/Deserialization/: AudioDeserializers.h  Deserializers.h  MathsDeserializers.h  ViewportDeserializers.h
Celeste/Headers/Events/: Event.h  EventTriggerer.h
Celeste/Headers/FileSystem/: File.h  Path.h
Celeste/Headers/Game/: Game.h
Celeste/Headers/GraphicalFX/: OpacityLerper.h
Celeste/Headers/Input/: InputEnums.h  InputManager.h  KeyboardActivator.h  KeyboardRigidBody2DController.h  KeyboardTransformer.h  KeyboardVisibility.h  MouseInteractionHandler.h
Celeste/Headers/Loading/: LoadResourcesAsyncScript.h
Celeste/Headers/Lua/: LuaState.h
Celeste/Headers/Maths/: Ellipse.h  MathsEnums.h  MathsUtils.h  RandomGenerator.h  Transform.h  Vector.h
Celeste/Headers/Media/: Video.h
Celeste/Headers/ObjectFX/: LimitedLifeTime.h
Celeste/Headers/Objects/: Component.h  Entity.h  GameObject.h  Script.h
Celeste/Headers/OpenAL/: OpenALState.h
Celeste/Headers/OpenGL/: GL.h  ManagedGLBuffer.h
Celeste/Headers/Physics/: Collider.h  EllipseCollider.h  PhysicsManager.h  PhysicsUtils.h  RectangleCollider.h  RigidBody2D.h
Celeste/Headers/Reflection/: ITypeInfo.h  Type.h  TypeTraits.h
Celeste/Headers/Registries/: CallbackRegistry.h  ComponentRegistry.h  DefaultRegistryAllocator.h  RegistryAllocator.h
Celeste/Headers/Rendering/: Canvas.h  ModelRenderer.h  RenderManager.h  RenderUtils.h  Renderer.h  SpriteBatch.h  SpriteRenderer.h  TextRenderer.h
Celeste/Headers/Resources/: Resource.h  ResourceLoader.h  ResourceManager.h  ResourceUtils.h
Celeste/Headers/Scene/: SceneLoader.h  SceneManager.h
Celeste/Headers/Screens/: Screen.h  ScreenManager.h  ScreenUtils.h
Celeste/Headers/Settings/: GameSettings.h  WindowSettings.h
Celeste/Headers/System/: Process.h
Celeste/Headers/Templates/: ChooseClass.h  ctstring.h
Celeste/Headers/Threads/: ThreadPool.h
Celeste/Headers/Time/: Clock.h  TimeUtils.h
Celeste/Headers/UI/: Button.h  LayoutEnums.h  ProgressBar.h  Slider.h  StackPanel.h  TextBox.h
Celeste/Headers/UtilityHeaders/: ComponentHeaders.h  GLHeaders.h  NetworkHeaders.h  PlatformHeaders.h
Celeste/Headers/UtilityMacros/: ComponentDataConverterMacros.h  ComponentMacros.h  CustomMemoryMacros.h  ScriptableObjectMacros.h
Celeste/Headers/Utils/: ToString.h
Celeste/Headers/Viewport/: Camera.h  OpenGLWindow.h  ViewportEnums.h
Celeste/Headers/XML/: XMLEnums.h  XMLObject.h  XMLObjectFactory.h  tinyxml2_ext.h
Celeste/Include/: CelesteConfig.h  CelesteDllExport.h  StaticLibExport.h
Celeste/Include/Algorithm/: Entity.h
Celeste/Include/Algorithms/: EntityAlgorithms.h
Celeste/Include/Animation/: AnimationState.h  Animator.h  StateMachine.h
Celeste/Include/Audio/: AudioEnums.h  AudioManager.h  AudioSource.h  AudioUtils.h
Celeste/Include/Bindings/: AudioDataBindingGenerators.h  BindingUtils.h  BindingsGenerator.h  DataBindingGenerators.h  MathsDataBindingGenerators.h  UIDataBindingGenerators.h
Celeste/Include/DataConverters/: DataConverter.h
Celeste/Include/Debug/: Assert.h  DolceUtils.h  Log.h
Celeste/Include/Deserialization/: Deserializers.h  InputDeserializers.h  UIDeserializers.h
Celeste/Include/Events/: Event.h  EventHandle.h  EventTriggerer.h  TriggerMode.h
Celeste/Include/Fields/: DataField.h  Field.h
Celeste/Include/FileSystem/: Directory.h
Celeste/Include/Game/: Game.h
Celeste/Include/GraphicalFX/: OpacityLerper.h
Celeste/Include/Input/: GraphicsRaycaster.h  InputManager.h  InputUtils.h  Key.h  Keyboard.h  KeyboardActivator.h  KeyboardRigidBody2DController.h  KeyboardTransformer.h  KeyboardVisibility.h  Mouse.h  MouseInteractionHandler.h  PhysicsRaycaster.h
Celeste/Include/Layout/: LayoutSystem.h  ResolutionScaler.h
Celeste/Include/Loading/: LoadResourcesAsyncScript.h
Celeste/Include/Maths/: Matrix.h  Ray.h  Rectangle.h  Transform.h  Vector.h
Celeste/Include/Media/: Video.h  VideoSettings.h
Celeste/Include/Networking/: NetworkUtils.h
Celeste/Include/Objects/: Component.h  Entity.h  GameObject.h  Object.h  ScriptableObject.h
Celeste/Include/Physics/: Collider.h  EllipseCollider.h  PhysicsManager.h  RectangleCollider.h  RigidBody2D.h  SimulatedBody.h
Celeste/Include/Reflection/: ITypeInfo.h  ReflectionUtils.h  Type.h
Celeste/Include/Registries/: ComponentDataConverterRegistry.h  ComponentRegistry.h  ScriptableObjectRegistry.h
Celeste/Include/Rendering/: Canvas.h  ModelRenderer.h  RenderManager.h  SpriteRenderer.h  TextRenderer.h
Celeste/Include/Resources/: Resource.h  ResourceLoader.h  ResourceManager.h
Celeste/Source/: CelesteDllExport.h
Celeste/Tests/: CMakeLists.txt
CelesteMocks/: CMakeLists.txt
CelesteMocks/Include/: CelesteMocksDllExport.h  CelesteMocksNamespace.h
CelesteTestUtils/: CMakeLists.txt  CelesteTestUtils.vcxproj  CelesteTestUtils.vcxproj.filters
CelesteTestUtils/Build Events/: CopyDependencyFiles.bat
CelesteTestUtils/Headers/: AssertCel.h  AutoALDeallocator.h  AutoDeallocator.h  AutoKiller.h  CelesteTestUtilsDllExport.h  CelesteUnitTest.h
CelesteTestUtils/Include/: ALUnitTest.h  AssertCel.h  CelesteTestUtilsDllExport.h  CelesteUnitTest.h
CelesteTestUtils/Source/: ALUnitTest.cpp  AssertCel.cpp  AutoDeallocator.cpp  CelesteUnitTest.cpp  KeyboardTextInputtedEventUnsubscriber.cpp
(+1952 files in other folders)
